feat(整个项目): aiyou-dg基本功能完成

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aiyou-download-git",
+  "name": "aiyou-dg",
   "version": "1.0.0",
   "description": " aiyou-dg（aiyou-download-git）是**哎呦系列**中，用于拉取远程或本地的Repository代码并且支持下载Repository的压缩包的工具包。",
   "main": "./index.js",
@@ -7,17 +7,22 @@
     "aiyou-dg": "./bin/index.js"
   },
   "scripts": {
-    "debugger": "node --inspect-brk ./node_modules/webpack/bin/webpack.js --config webpack.config.babel.js --progress --display-error-details --profile",
-    "lint": "eslint --ext .js ./",
-    "lint-fix": "eslint --fix --ext .js ./",
-    "log": "conventional-changelog --config ./node_modules/vue-cli-plugin-commitlint/lib/log -i CHANGELOG.md -s -r 0",
-    "cz": "git add . && git cz",
-    "push": "git push origin master:master",
+    "debugger2": "node --inspect-brk ./node_modules/webpack/bin/webpack.js --config webpack.config.babel.js --progress --display-error-details --profile",
+    "debugger": "node --inspect-brk  ./bin/index.js",
     "test": "jest --cache",
     "test-all": "jest --watchAll",
     "test2": "jest --coverage",
     "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache"
+    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "lint": "eslint --ext .js ./",
+    "cz": "npm run lint&npm run lint-fix&npm run log && git add . && git cz",
+    "lint-fix": "eslint --fix --ext .js ./",
+    "log": "conventional-changelog --config ./node_modules/vue-cli-plugin-commitlint/lib/log -i CHANGELOG.md -s -r 0",
+    "push": "git push origin master:master",
+    "release": "standard-version",
+    "push-tag": "git push --follow-tags origin master",
+    "czpush": "npm run cz && npm run push",
+    "tagpush": "npm run release && npm run push-tag"
   },
   "pre-commit": [
     "lint",
@@ -90,11 +95,17 @@
   },
   "author": "哎哟迪奥",
   "license": "MPL-2",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@types/jest": "^24.0.23",
-    "autoprefixer": "^9.4.2",
+    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
@@ -104,15 +115,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "child-process-promise": "^2.2.1",
-    "colors": "^1.4.0",
     "commitizen": "^4.0.3",
     "commitlint": "^8.2.0",
     "conventional-changelog-cli": "^2.0.28",
-    "copy-webpack-plugin": "^5.1.1",
-    "coveralls": "^3.0.6",
-    "cross-env": "^6.0.3",
-    "cz-conventional-changelog": "^3.0.2",
-    "eslint": "^6.7.2",
+    "cz-conventional-changelog": "^3.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^3.0.3",
@@ -121,22 +128,11 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "glob-all": "^3.1.0",
+    "eslint-plugin-vue": "^6.1.2",
     "husky": "^3.0.9",
-    "imports-loader": "^0.8.0",
-    "jest": "^24.9.0",
-    "jest-config": "^24.9.0",
-    "lint-staged": "^9.4.1",
-    "nprogress": "^0.2.0",
-    "postcss": "^7.0.6",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-sprites": "^4.2.1",
+    "nodemon": "^2.0.2",
     "pre-commit": "^1.2.2",
-    "prompt": "^1.0.0",
-    "regenerator-runtime": "^0.13.3",
-    "semantic-release": "^15.13.24",
-    "supertest": "^4.0.2",
+    "standard-version": "^7.1.0",
     "ts-jest": "^24.1.0",
     "ts-loader": "^6.2.0",
     "ts-node": "^8.4.1",
@@ -146,29 +142,25 @@
     "tslint-loader": "^3.5.4",
     "typescript": "^3.7.3",
     "typescript-babel-jest": "^1.0.6",
-    "url-loader": "^1.1.2",
-    "vue-cli-plugin-commitlint": "^1.0.10"
+    "vue-cli-plugin-commitlint": "~1.0.12",
+    "vue-template-compiler": "^2.6.11"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-2": "^6.24.1",
     "chalk": "^3.0.0",
     "child_process": "^1.0.2",
     "cli-spinners": "^2.2.0",
     "commander": "^4.1.0",
-    "download-git-repo": "^3.0.2",
-    "exec": "^0.2.1",
-    "figlet": "^1.2.4",
-    "inquirer": "^7.0.4",
-    "javascriptplus": "^1.2.0",
-    "ora": "^4.0.3",
-    "yargs": "^15.1.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-stage-2": "^6.24.1",
     "core-decorators": "^0.20.0",
-    "core-js": "^3.1.4"
+    "core-js": "^3.1.4",
+    "download": "^7.1.0",
+    "figlet": "^1.2.4",
+    "git-clone": "^0.1.0",
+    "inquirer": "^7.0.4",
+    "ora": "^4.0.3",
+    "rimraf": "^3.0.1",
+    "yargs": "^15.1.0"
   },
   "repository": {
     "type": "git",
