--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aiyou-dg",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": " aiyou-dg（aiyou-download-git）是**哎呦系列**中，用于拉取远程或本地的Repository代码并且支持下载Repository的压缩包的工具包。",
   "main": "./index.js",
   "bin": {
@@ -23,7 +23,8 @@
     "push-tag": "git push --follow-tags origin master",
     "czpush": "npm run cz && npm run push",
     "tagpush": "npm run release && npm run push-tag",
-    "tonpm": "nrm use npm && npm login && npm publish"
+    "login": "npm login",
+    "tonpm": "nrm use npm && npm publish"
   },
   "pre-commit": [
     "lint",
@@ -101,14 +102,10 @@
     "last 2 versions"
   ],
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-stage-2": "^6.24.1",
     "chalk": "^3.0.0",
     "child_process": "^1.0.2",
     "cli-spinners": "^2.2.0",
     "commander": "^4.1.0",
-    "core-decorators": "^0.20.0",
-    "core-js": "^3.1.4",
     "download": "^7.1.0",
     "figlet": "^1.2.4",
     "git-clone": "^0.1.0",
