--- a/package.json
+++ b/package.json
@@ -101,6 +101,67 @@
     "> 1%",
     "last 2 versions"
   ],
+  "devDependencies": {
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@types/jest": "^24.0.23",
+    "autoprefixer": "^9.4.2",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "child-process-promise": "^2.2.1",
+    "colors": "^1.4.0",
+    "commitizen": "^4.0.3",
+    "commitlint": "^8.2.0",
+    "conventional-changelog-cli": "^2.0.28",
+    "copy-webpack-plugin": "^5.1.1",
+    "coveralls": "^3.0.6",
+    "cross-env": "^6.0.3",
+    "cz-conventional-changelog": "^3.0.2",
+    "eslint": "^6.7.2",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "glob-all": "^3.1.0",
+    "husky": "^3.0.9",
+    "imports-loader": "^0.8.0",
+    "jest": "^24.9.0",
+    "jest-config": "^24.9.0",
+    "lint-staged": "^9.4.1",
+    "nprogress": "^0.2.0",
+    "postcss": "^7.0.6",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-sprites": "^4.2.1",
+    "pre-commit": "^1.2.2",
+    "prompt": "^1.0.0",
+    "regenerator-runtime": "^0.13.3",
+    "semantic-release": "^15.13.24",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.2.0",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.7.3",
+    "typescript-babel-jest": "^1.0.6",
+    "url-loader": "^1.1.2",
+    "vue-cli-plugin-commitlint": "^1.0.10",
+    "download-git-repo": "^3.0.2",
+    "exec": "^0.2.1"
+  },
   "dependencies": {
     "chalk": "^3.0.0",
     "child_process": "^1.0.2",
